# k-min-sum-radii

./: .gitignore  README.md  build_extension.py  eval.py  generator.py  plot.py  pyproject.toml
.github/workflows/: gitlab.yml  mypy-flake-test.yml
kMSR/: gonzales.cpp  gonzalez.cpp  heuristic.cpp  k_MSR.cpp  point.cpp  util.cpp  welzl.cpp  wrapper.cpp
kMSR/header/: gonzales.h  gonzalez.h  heuristic.h  k_MSR.h  point.h  util.h
kmsr/: __init__.py  _core.cpp  ball.cpp  core.py  generate_points.py  plot.py
kmsr/cpp/: gonzales.cpp  heuristic.cpp  k_MSR.cpp  point.cpp  util.cpp  welzl.cpp  yildirim.cpp
kmsr/header/: k_MSR.h
tests/: test.py
