[tool.poetry]
name = "kmsr"
version = "0.1.0"
description = ""
authors = ["Niklas Lenssen <niklas.lenssen@hhu.de>", "Annika Hennes <annika.hennes@hhu.de>", "Melanie Schmidt <mschmidt@hhu.de>", "Giulia Baldini <giulia.baldini@hhu.de>"]
readme = "README.md"
license = "LICENSE"
packages = [
    { include = "kmsr" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^1.10.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"

[tool.poetry.build]
script = "build_extension.py"
generate-setup-file = true

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"
line_length = 88
